--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -6,7 +6,8 @@
 log_path = D:\hidra\logs
 
 # Filename used for logging
-log_name = datamanager.log
+# (possible placeholders are: date -> YYYY-MM-DD)
+log_name = datamanager_{date}.log
 
 # User as which the service should be running
 username = hidrauser
