--- a/conf/control_server.yaml
+++ b/conf/control_server.yaml
@@ -10,6 +10,11 @@ controlserver:
     #backup_file:/beamline/support/hidra/instances.txt
     backup_file: /home/kuhnm/projects/hidra/instances.txt
 
+    ldapuri: "it-ldap-slave.desy.de:1389"
+
+    # use {bl} as placeholder for the beamline
+    netgroup_template: "a3{bl}-hosts"
+
     # use {bl} as placeholder for the beamline and {det} for the detector
     hidra_config_name: datamanager_{bl}_{det}.yaml
 #    hidra_config_name: datamanager_{bl}_{det}.conf
