--- a/conf/datamanager.yaml
+++ b/conf/datamanager.yaml
@@ -25,6 +25,9 @@ general:
     whitelist: ["localhost"]
     #whitelist: None
 
+    # Use an additional process to collect all contig parameter
+    use_statserver: False
+
 eventdetector:
     # Type of event detector to use (options are:
     # inotifyx_events, watchdog_events, zmq_events, http_events)
