--- a/conf/control_server.yaml
+++ b/conf/control_server.yaml
@@ -19,15 +19,13 @@ controlserver:
     hidra_config_name: datamanager_{bl}_{det}.yaml
 #    hidra_config_name: datamanager_{bl}_{det}.conf
 
-    # if the started hidra instance should be connected to
-    enable_hidra_connection: False
-
 hidraconfig_static:
     general:
         log_path: *log_path
         log_size: 10485760
         com_port: 50000
         request_port: 50001
+        use_statserver: False
     eventdetector:
         type: http_events
         # type: inotifyx_events
