--- a/docker/Dockerfile.ewmscp
+++ b/docker/Dockerfile.ewmscp
@@ -4,7 +4,7 @@ RUN apt update && apt install -y \
     python3 \
     python3-zmq \
     python3-setproctitle \
-    python3-six \
+    python3-future \
     python3-yaml \
     python3-logutils \
     python3-kafka
