--- a/docker/Dockerfile.receiver
+++ b/docker/Dockerfile.receiver
@@ -7,7 +7,7 @@ RUN apt update && apt install -y \
 RUN pip install \
     pyzmq \
     setproctitle \
-    six \
+    future \
     logutils \
     pyyaml \
     pathlib2
