--- a/test/diff_envs/Dockerfile.centos6
+++ b/test/diff_envs/Dockerfile.centos6
@@ -10,8 +10,9 @@ RUN yum update -y && yum install -y \
 RUN pip install \
     pyzmq \
     setproctitle \
-    six \
+    future \
     inotifyx \
+    pyyaml \
     argparse
 RUN cd /opt && \
     git clone https://stash.desy.de/scm/hidra/hidra.git && \
