--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,7 +2,7 @@
 current_version = 4.0.23
 tag = False
 commit = False
-files = freeze_setup.py src/APIs/utils/_version.py
+files = freeze_setup.py src/APIs/hidra/utils/_version.py
 
 [bumpversion:file:HISTORY.md]
 search = # develop
@@ -17,5 +17,5 @@ replace = %changelog
 
 [bumpversion:file:debian/changelog]
 search = bumpversion_placeholder
-replace = 
+replace =
 
