--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,8 @@ override_dh_auto_install:
 	cp -r conf/datamanager.yaml debian/tmp/opt/hidra/conf
 	cp -r conf/base_receiver.yaml debian/tmp/opt/hidra/conf
 	cp -r conf/datareceiver.yaml debian/tmp/opt/hidra/conf
+	cp -r conf/control_server.yaml debian/tmp/opt/hidra/conf
+	cp -r conf/control_client.yaml debian/tmp/opt/hidra/conf
 	cp initscripts/*.service debian/tmp/lib/systemd/system
 %:
 	dh $@ --with python2
