--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -10,7 +10,7 @@ log_path = /var/log/hidra
 log_name = datamanager.log
 
 # User as which the service should be running
-username = hidrauser
+#username = hidrauser
 
 # Name with which the service should be running
 procname = hidra
