--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -9,7 +9,7 @@ log_path = /var/log/hidra
 log_name = datamanager.log
 
 # User as which the service should be running
-username = hidrauser
+#username = hidrauser
 
 # Name with which the service should be running
 procname = hidra
