--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -10,7 +10,7 @@ log_path = D:\hidra\logs
 log_name = datamanager_{date}.log
 
 # User as which the service should be running
-username = hidrauser
+#username = hidrauser
 
 # Name with which the service should be running
 procname = hidra
